--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,8 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="35dp"
+        android:textStyle="bold"
+        android:textColor="@color/heading"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +79,7 @@
         android:id="@+id/Application_Logo"
         android:layout_width="350dp"
         android:layout_height="250dp"
+        android:background="@drawable/bg_edtext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
