--- a/app/src/main/res/layout/activity_common_info_sign_up.xml
+++ b/app/src/main/res/layout/activity_common_info_sign_up.xml
@@ -72,6 +72,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:inputType="text"
                 android:hint="First Name"
                 android:textAlignment="center"/>
@@ -84,6 +89,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:inputType="text"
                 android:hint="Middle Name"
                 android:textAlignment="center"/>
@@ -96,6 +106,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:inputType="text"
                 android:hint="Last Name"
                 android:textAlignment="center"/>
@@ -119,6 +134,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:inputType="text"
                 android:hint="Identity Number"
                 android:textAlignment="center"/>
@@ -134,6 +154,7 @@
 
                 <RadioButton
                     android:id="@+id/M_gender_RadioG_Sign_UP"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -160,15 +181,25 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:inputType="text"
                 android:hint="Contact Number"
                 android:textAlignment="center"/>
 
             <EditText
                 android:id="@+id/email_Sign_Up_TextEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:inputType="textEmailAddress"
@@ -177,9 +208,14 @@
 
             <EditText
                 android:id="@+id/password_Sign_Up_TextEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:inputType="textPassword"
@@ -188,9 +224,14 @@
 
             <EditText
                 android:id="@+id/confirm_password_Sign_Up_TextEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="350dp"
+                android:layout_height="50dp"
                 android:ems="10"
+                android:background="@drawable/bg_edtext"
+                android:drawableLeft="@drawable/ic_user"
+                android:drawablePadding="10dp"
+                android:elevation="5dp"
+                android:paddingLeft="35dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:inputType="textPassword"
