Database Intergeation Two
Solving a bug.

--- a/app/src/main/res/layout/activity_common_info_sign_up.xml
+++ b/app/src/main/res/layout/activity_common_info_sign_up.xml
@@ -191,6 +191,7 @@
                 android:id="@+id/email_Sign_Up_TextEdit"
                 android:layout_width="350dp"
                 android:layout_height="50dp"
+                android:layout_gravity="center_horizontal"
                 android:ems="10"
                 android:background="@drawable/bg_edtext"
                 android:drawableLeft="@drawable/ic_user"
@@ -208,6 +209,7 @@
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:ems="10"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/bg_edtext"
                 android:drawableLeft="@drawable/ic_user"
                 android:drawablePadding="10dp"
@@ -224,6 +226,7 @@
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:ems="10"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/bg_edtext"
                 android:drawableLeft="@drawable/ic_user"
                 android:drawablePadding="10dp"
